--- a/src/app/speakers/speaker-list/speaker-list.component.html
+++ b/src/app/speakers/speaker-list/speaker-list.component.html
@@ -8,8 +8,8 @@
     <div class="text-center" *ngIf="isLoggedIn() && isAdmin()">
       <button type="button" class="btn btn-success" routerLink="/speakers/new">Create Speaker</button>
     </div>
-    <div class="row text-center">
-      <div *ngFor="let speaker of speakers | async" class="col-lg-3 col-md-6 mb-r" style="padding-left: 40px; padding-right: 40px; padding-bottom: 50px; margin: 0 auto;">
+    <div class="row text-center" *ngIf="speakers | async as speakers; else noSpeakers">
+      <div *ngFor="let speaker of speakers" class="col-lg-3 col-md-6 mb-r" style="padding-left: 40px; padding-right: 40px; padding-bottom: 50px; margin: 0 auto;">
         <div class="avatar show-modal" (click)="showModal(speaker)" title="{{ speaker.name }}" alt="{{ speaker.name }}">
           <img *ngIf="!speaker.photoURL" class="rounded-circle z-depth-1" style="background-image: url('../../../assets/img/user-default.png')">
           <img *ngIf="speaker.photoURL" class="rounded-circle z-depth-1" [ngStyle]="{'background-image': 'url(' + speaker.photoURL + ')'}">
@@ -49,9 +49,11 @@
         </a>
       </div>
     </div>
-    <div *ngIf="(speakers | async)?.length === 0" class="text-center">
-      <h5>Stay tuned! Speakers are being added soon!</h5>
-    </div>
+    <ng-template #noSpeakers>
+      <div class="text-center">
+        <h5>Stay tuned! Speakers are being added soon!</h5>
+      </div>
+    </ng-template>
   </section>
   <!--Section: Speakers-->
 </div>
