--- a/src/app/top-menu/top-menu.component.html
+++ b/src/app/top-menu/top-menu.component.html
@@ -1,5 +1,5 @@
 <!--Navbar-->
-<mdb-navbar SideClass="navbar navbar-expand-lg navbar-dark elegant-color-dark fixed-top scrolling-navbar d-print-none">
+<mdb-navbar SideClass="navbar navbar-expand-lg navbar-dark elegant-color-darkb fixed-top scrolling-navbar d-print-none">
   <logo><a class="navbar-brand" routerLink="/home">{{ (siteConfig | async)?.eventName }}</a></logo>
   <links>
     <ul class="navbar-nav ml-auto">
