--- a/src/styles.scss
+++ b/src/styles.scss
@@ -6,3 +6,14 @@
   background: url("assets/img/hero.png") no-repeat center center;
   background-size: cover;
 }
+
+.elegant-color-darkb
+{
+  background-color: #2196F3;
+}
+
+.elegant-color-darkc
+
+{
+  background-color: #2196F3;
+}
