--- a/src/styles/delorean.scss
+++ b/src/styles/delorean.scss
@@ -29,8 +29,9 @@
 }
 
 .hm-black-strong .mask, .hm-black-strong .full-bg-img {
-  background-color:#2196F3 !important;
+  background-color:rgb(83, 86, 88) !important;
 }
+
 
 .text-center {
   text-align: center!important;
