--- a/src/styles/loading.scss
+++ b/src/styles/loading.scss
@@ -3,7 +3,7 @@
   position: fixed;
   height: 100%;
   width: 100%;
-  background: #272c33;
+  background: #2196F3;
   padding-top: 25vh;
   text-align: center;
   z-index: -1;
