update(top-menu): Refactor to us standard Angular name scheme

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,6 +1,6 @@
 <header *ngIf="siteConfig$ | async as config">
 
-  <top-menu></top-menu>
+  <app-top-menu></app-top-menu>
 
   <!--Intro Section-->
   <section class="view intro-1 hm-black-strong">
