--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -5,25 +5,17 @@
   <!--Intro Section-->
   <section class="view intro-1 hm-black-strong">
     <div class="full-bg-img flex-center">
-      <div class="container" style="position:relative;">
-        <ul>
-          <li>
-            <h1 class="h1-responsive font-bold">{{ config?.eventName }}</h1>
-          </li>
-          <li>
-            <p class="lead mt-4 mb-5">
-              {{ config?.eventDate | date:'fullDate' }}<br/>
-              <strong>@&nbsp;{{ config?.venueName }}</strong>
-            </p>
-            <p class="lead mt-4 mb-5">
-              A 100% community organized developer conference with industry experts presenting on exciting topics!
-            </p>
-          </li>
-          <li>
-            <a target="_blank" rel="noopener" [href]="config?.ticketURL" class="btn btn-primary btn-lg" rel="nofollow">Reserve Your Seat</a>
-            <a *ngIf="config?.speakerURL" target="_blank" rel="noopener" [href]="config?.speakerURL" class="btn btn-default btn-lg" rel="nofollow">Become A Speaker</a>
-          </li>
-        </ul>
+      <div class="container text-center">
+        <h1 class="h1-responsive font-weight-bold">{{ config?.eventName }}</h1>
+        <p class="lead mt-4 mb-5">
+          {{ config?.eventDate | date:'fullDate' }}<br/>
+          <strong>@&nbsp;{{ config?.venueName }}</strong>
+        </p>
+        <p class="lead mt-4 mb-5">
+          A 100% community organized developer conference with industry experts presenting on exciting topics!
+        </p>
+        <a target="_blank" rel="noopener" [href]="config?.ticketURL" class="btn btn-primary btn-lg" rel="nofollow">Reserve Your Seat</a>
+        <a *ngIf="config?.speakerURL" target="_blank" rel="noopener" [href]="config?.speakerURL" class="btn btn-default btn-lg" rel="nofollow">Become A Speaker</a>
       </div>
       <div class="arrow bounce">
         <a class="fa fa-chevron-down fa-1x" [ngx-scroll-to]="'#about'"></a>
