--- a/src/app/speakers/speaker-new/speaker-new.component.html
+++ b/src/app/speakers/speaker-new/speaker-new.component.html
@@ -20,7 +20,7 @@
         <label for="company">Company:</label>
       </div>
       <div class="md-form">
-        <textarea mdbActive type="text" id="description" class="md-textarea" style="height: 100px" [(ngModel)]="speaker.description" name="description"></textarea>
+        <textarea mdbActive type="text" id="description" class="-textarea md-textarea-auto form-control" style="height: 100px" [(ngModel)]="speaker.description" name="description"></textarea>
         <label for="description">Speaker Bio:</label>
       </div>
       <div class="form-group" style="padding-bottom: 25px;">
