--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -25,7 +25,7 @@
 
 </header>
 
-<div class="container">
+<div class="container" *ngIf="siteConfig$ | async as config">
   <div id="about" class="divider-new pt-5">
     <h2 class="h2-responsive">About</h2>
   </div>
@@ -45,14 +45,12 @@
   </section>
   <!--Section: About-->
 
-  <ng-template #noSpeakers>
-    <div class="divider-new pt-5">
-      <h2 class="h2-responsive">Featured Speakers</h2>
-    </div>
-  </ng-template>
+  <div class="divider-new pt-5" *ngIf="(speakers$ | async)?.length > 0">
+    <h2 class="h2-responsive">Featured Speakers</h2>
+  </div>
 
   <!--Section: Featured Speakers-->
-  <section class="section team-section" *ngIf="speakers$ | async as speakers ; else noSpeakers">
+  <section class="section team-section" *ngIf="(speakers$ | async)?.length > 0 && speakers$ | async as speakers">
     <div class="row text-center">
       <div *ngFor="let speaker of speakers" class="col-lg-3 col-md-6 mb-r" style="padding-left: 40px; padding-right: 40px; margin: 0 auto;">
         <div class="avatar" title="{{ speaker.name }}" alt="{{ speaker.name }}">
@@ -96,7 +94,7 @@
     <div class="row">
       <div class="col-md-9 mb-5">
         <div id="map-container" class="z-depth-1" style="height: 300px">
-          <agm-map style="height: 300px" [latitude]="( config?.venueGeoData?.lat + 0.0003 )" [longitude]="( config?.venueGeoData?.lng )" [scrollwheel]="false" [zoom]="18">
+          <agm-map style="height: 300px" [latitude]="( config?.venueGeoData?.lat + 0.0003 )" [longitude]="( config?.venueGeoData?.lng )" [scrollwheel]="false" [zoom]="17">
             <agm-marker [latitude]="( config?.venueGeoData?.lat )" [longitude]="( config?.venueGeoData?.lng )">
               <agm-info-window [isOpen]="true" [maxWidth]="180">
                 <strong>{{ config?.venueName }}</strong><br/>
@@ -141,14 +139,12 @@
   </section>
   <!--Section: CoC-->
 
-  <ng-template #noTickets>
-    <div class="divider-new pt-5">
-      <h2 class="h2-responsive">Pricing</h2>
-    </div>
-  </ng-template>
+  <div class="divider-new pt-5" *ngIf="(tickets$ | async)?.length > 0">
+    <h2 class="h2-responsive">Pricing</h2>
+  </div>
 
   <!--Section: Pricing-->
-  <section class="section" *ngIf="tickets$ | async as tickets ; else noTickets">
+  <section class="section" *ngIf="(tickets$ | async)?.length > 0 && tickets$ | async as tickets">
     <div class="row pt-3">
       <div class="mb-r" *ngFor="let ticket of tickets; let i = index;" [ngClass]="tickets.length > 3 ? 'col-lg-3' : 'col-lg-4'" style="padding: 20px 40px; margin: 0 auto;">
         <div class="card" *ngIf="ticket.active">
@@ -200,14 +196,12 @@
   </section>
   <!--/Section: Pricing-->
 
-  <ng-template #noSponsors>
-    <div class="divider-new pt-5">
-      <h2 class="h2-responsive">Sponsors</h2>
-    </div>
-  </ng-template>
+  <div class="divider-new pt-5" *ngIf="(sponsors$ | async)?.length > 0">
+    <h2 class="h2-responsive">Sponsors</h2>
+  </div>
 
   <!--Section: Sponsors-->
-  <section class="section" *ngIf="sponsors$ | async as sponsors ;">
+  <section class="section" *ngIf="(sponsors$ | async)?.length > 0 && sponsors$ | async as sponsors">
     <div class="col sponsors">
       <h4>We partner with some of the<br/>world's most innovative brands.</h4>
       <a *ngIf="config?.sponsorURL" class="btn btn-primary waves-light" [href]="config?.sponsorURL" target="_blank" rel="noopener">Become a Sponsor</a>
