update(site-config): add option to select event type (DevFest or IWD) which auto-configures the "About" text on the homepage

--- a/src/app/admin/site-config/site-config.component.html
+++ b/src/app/admin/site-config/site-config.component.html
@@ -8,26 +8,26 @@
       <section class="col-md-12">
         <form novalidate>
           <h2 class="title">
-            <strong>Group Details:</strong>
+            <strong>GDG/WTM Group Details:</strong>
           </h2>
           <br>
           <div class="md-form">
             <i class="fa fa-users prefix grey-text"></i>
             <input type="text" [(ngModel)]="siteConfig.groupName" name="groupName" #groupName="ngModel" id="groupName" class="form-control" required>
-            <label for="groupName" [class.active]="siteConfig.groupName && siteConfig.groupName.length > 0">GDG Name: <small>(required)</small></label>
+            <label for="groupName" [class.active]="siteConfig.groupName && siteConfig.groupName.length > 0">Group Name: <small>(required)</small></label>
             <div *ngIf="groupName.invalid && (groupName.dirty || groupName.touched)" class="text-danger">
               <div *ngIf="groupName.errors.required">
-                GDG Name is required.
+                Group Name is required.
               </div>
             </div>
           </div>
           <div class="md-form">
             <i class="fa fa-link prefix grey-text"></i>
             <input type="text" [(ngModel)]="siteConfig.groupWebsite" name="groupWebsite" #groupWebsite="ngModel" id="groupWebsite" class="form-control" required>
-            <label for="groupWebsite" [class.active]="siteConfig.groupWebsite && siteConfig.groupWebsite.length > 0">GDG Website URL: <small>(required)</small></label>
+            <label for="groupWebsite" [class.active]="siteConfig.groupWebsite && siteConfig.groupWebsite.length > 0">Website URL: <small>(required)</small></label>
             <div *ngIf="groupWebsite.invalid && (groupWebsite.dirty || groupWebsite.touched)" class="text-danger">
               <div *ngIf="groupWebsite.errors.required">
-                GDG Website URL is required.
+                Group Website URL is required.
               </div>
             </div>
           </div>
@@ -61,10 +61,19 @@
             <strong>Event Details:</strong>
           </h2>
           <br>
+          <div class="md-form dl-select">
+            <i class="fa fa-calendar-check-o prefix grey-text"></i>
+            <label for="level">Event Type:&nbsp;<small>(required)</small></label>
+            <select class="mdb-select" id="eventType" [(ngModel)]="siteConfig.eventType" name="eventType">
+              <option value="" disabled selected>Choose your option</option>
+              <option value="DevFest">DevFest</option>
+              <option value="IWD">International Women's Day (IWD)</option>
+            </select>
+          </div>
           <div class="md-form">
             <i class="fa fa-google prefix grey-text"></i>
             <input type="text" [(ngModel)]="siteConfig.eventName" name="eventName" #eventName="ngModel" id="eventName" class="form-control" required>
-            <label for="eventName" [class.active]="siteConfig.eventName && siteConfig.eventName.length > 0">Event Name: <em>(ex. DevFest KC 2018)</em> <small>(required)</small></label>
+            <label for="eventName" [class.active]="siteConfig.eventName && siteConfig.eventName.length > 0">Event Name: <em>(ex. DevFest KC 2018)</em>&nbsp;<small>(required)</small></label>
             <div *ngIf="eventName.invalid && (eventName.dirty || eventName.touched)" class="text-danger">
               <div *ngIf="eventName.errors.required">
                 Event Name is required.
@@ -94,7 +103,7 @@
           <div class="md-form">
             <i class="fa fa-envelope prefix grey-text"></i>
             <input type="text" [(ngModel)]="siteConfig.eventEmail" name="eventEmail" #eventEmail="ngModel" id="eventEmail" class="form-control" required>
-            <label for="eventEmail" [class.active]="siteConfig.eventEmail && siteConfig.eventEmail.length > 0">Event Email Address: <em>(ex. devfest@gmail.com)</em> <small>(required)</small></label>
+            <label for="eventEmail" [class.active]="siteConfig.eventEmail && siteConfig.eventEmail.length > 0">Event Email Address: <em>(ex. devfest@gmail.com)</em>&nbsp;<small>(required)</small></label>
             <div *ngIf="eventEmail.invalid && (eventEmail.dirty || eventEmail.touched)" class="text-danger">
               <div *ngIf="eventEmail.errors.required">
                 Event Email Address is required.
@@ -104,7 +113,7 @@
           <div class="md-form">
             <i class="fa fa-envelope-o prefix grey-text"></i>
             <input type="text" [(ngModel)]="siteConfig.eventReportEmail" name="eventReportEmail" #eventReportEmail="ngModel" id="eventReportEmail" class="form-control" required>
-            <label for="eventReportEmail" [class.active]="siteConfig.eventReportEmail && siteConfig.eventReportEmail.length > 0">Event Code of Conduct Team Email: <em>(ex. coc@devfestcity.com)</em> <small>(required)</small></label>
+            <label for="eventReportEmail" [class.active]="siteConfig.eventReportEmail && siteConfig.eventReportEmail.length > 0">Event Code of Conduct Team Email: <em>(ex. coc@devfestcity.com)</em>&nbsp;<small>(required)</small></label>
             <div *ngIf="eventReportEmail.invalid && (eventReportEmail.dirty || eventReportEmail.touched)" class="text-danger">
               <div *ngIf="eventReportEmail.errors.required">
                 Event Code of Conduct Team Email is required.
