--- a/src/app/admin/site-config/site-config.component.scss
+++ b/src/app/admin/site-config/site-config.component.scss
@@ -1,3 +1,13 @@
 small {
   color: red;
 }
+
+.dl-select label {
+  margin-top: -20px;
+}
+
+.mdb-select {
+  margin-top: 20px;
+  margin-left: 40px;
+  margin-bottom: 10px;
+}
