--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -31,16 +31,30 @@
   </div>
 
   <!--Section: About-->
-  <section class="text-center">
+  <section class="text-center" *ngIf="!config?.eventType || config?.eventType === 'DevFest'">
     <p>
-      <strong>Google Developer Group DevFests</strong> are the largest Google related events in the world! Each DevFest is carefully
-      crafted for you by your local GDG community to bring in awesome speakers, great topics, and lots fun! While no two events
-      will be exactly alike, each GDG DevFest will, at its core, be powered by a shared belief that when developers come together
-      to exchange ideas, amazing things&nbsp;can&nbsp;happen!
+      <strong>GDG DevFests</strong> are large, community-run developer events happening around the globe focused on community
+      building and learning about Google’s technologies. Each DevFest is carefully crafted for you by your local GDG community
+      to bring in awesome speakers, great topics, and lots fun! While no two events will be exactly alike, each GDG DevFest will,
+      at its core, be powered by a shared belief that when developers come together to exchange ideas,
+      amazing&nbsp;things&nbsp;can&nbsp;happen!
     </p>
     <p>
       <strong>{{ config?.eventName }}</strong> is a 100% community organized full-day developer conference featuring awesome
       world-class speakers from technology leaders within the community as well as Google product team&nbsp;developers.
+    </p>
+  </section>
+  <section class="text-center" *ngIf="config?.eventType === 'IWD'">
+    <p>
+      <strong>International Women's Day</strong> (IWD) is marked on March 8th every year. In different regions around the globe,
+      the focus of celebrations ranges from general respect and appreciation for women to a celebration of women's economic,
+      political, and social achievements. Each IWD will be tailored to local communities of women in technology. Summits and meetups
+      around the world may feature hands-on coding workshops, inspiring speakers, and networking opportunities.
+    </p>
+    <p>
+      <strong>{{ config?.eventName }}</strong> is a 100% community organized event that aims to provide visibility, community, and resources
+      for women in technology. Our event is designed to promote an environment of inclusivity for women in tech, as well as celebrate
+      women innovators and leaders in the industry.
     </p>
   </section>
   <!--Section: About-->
