--- a/src/app/admin/site-config/site-config.component.html
+++ b/src/app/admin/site-config/site-config.component.html
@@ -143,9 +143,24 @@
             </div>
           </div>
           <div class="md-form">
+            <i class="fa fa-google-plus prefix grey-text"></i>
+            <input type="text" [(ngModel)]="siteConfig.eventGoogle" name="eventGoogle" id="eventGoogle" class="form-control">
+            <label for="eventGoogle" [class.active]="siteConfig.eventGoogle && siteConfig.eventGoogle.length > 0">Event Google+: <em>(only add the +handle)</em></label>
+          </div>
+          <div class="md-form">
+            <i class="fa fa-facebook prefix grey-text"></i>
+            <input type="text" [(ngModel)]="siteConfig.eventFacebook" name="eventFacebook" id="eventFacebook" class="form-control">
+            <label for="eventFacebook" [class.active]="siteConfig.eventFacebook && siteConfig.eventFacebook.length > 0">Event Facebook: <em>(only add the handle)</em></label>
+          </div>
+          <div class="md-form">
             <i class="fa fa-twitter prefix grey-text"></i>
             <input type="text" [(ngModel)]="siteConfig.eventTwitter" name="eventTwitter" id="eventTwitter" class="form-control">
-            <label for="eventTwitter" [class.active]="siteConfig.eventTwitter && siteConfig.eventTwitter.length > 0">Event Twitter: <em>(without the @)</em></label>
+            <label for="eventTwitter" [class.active]="siteConfig.eventTwitter && siteConfig.eventTwitter.length > 0">Event Twitter: <em>(only add the handle)</em></label>
+          </div>
+          <div class="md-form">
+            <i class="fa fa-instagram prefix grey-text"></i>
+            <input type="text" [(ngModel)]="siteConfig.eventInstagram" name="eventInstagram" id="eventInstagram" class="form-control">
+            <label for="eventInstagram" [class.active]="siteConfig.eventInstagram && siteConfig.eventInstagram.length > 0">Event Instagram: <em>(only add the handle)</em></label>
           </div>
           <div class="md-form">
             <i class="fa fa-hashtag prefix grey-text"></i>
