--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -64,3 +64,19 @@
     transform: translateY(-15px);
   }
 }
+
+.social-section ul {
+  list-style-type: none;
+  padding: 0;
+  margin: 0;
+}
+
+.social-section li {
+  list-style: none;
+}
+
+.social-section ul li {
+  display: inline-block;
+  padding: 0 15px;
+  font-size: 30px;
+}
