update(home, top-menu): make "Buy Now" links more friendly with "Register" text

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -215,7 +215,7 @@
                 &nbsp;
               </span>
               <div class="text-center ticket-button">
-                <button type="button" class="btn btn-primary waves-light" [href]="config?.ticketURL">Buy Ticket</button>
+                <button type="button" class="btn btn-primary waves-light" [href]="config?.ticketURL">Register</button>
               </div>
             </div>
           </div>
