--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -60,7 +60,7 @@
   <section class="text-center" *ngIf="config?.eventType === 'Other'">
     <p [innerHTML]="config?.eventDescription"></p>
   </section>
-  <section class="text-center">
+  <section class="text-center" *ngIf="config?.eventGoogle || config?.eventFacebook || config?.eventTwitter || config?.eventInstagram">
     <!--Social buttons-->
     <div class="social-section mb-3">
       <h5 class="title mt-3 mb-4">Follow us on social media</h5>
