--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -215,7 +215,7 @@
                 &nbsp;
               </span>
               <div class="text-center ticket-button">
-                <button type="button" class="btn btn-primary waves-light" [href]="config?.ticketURL">Register</button>
+                <a target="_blank" rel="noopener" [href]="config?.ticketURL" class="btn btn-primary waves-light" rel="nofollow">Buy Ticket</a>
               </div>
             </div>
           </div>
