--- a/src/app/top-menu/top-menu.component.html
+++ b/src/app/top-menu/top-menu.component.html
@@ -36,7 +36,7 @@
         </div>
       </li>
       <li class="nav-item active">
-        <a class="nav-link" [href]="config?.ticketURL" target="_blank" rel="noopener">Register</a>
+        <a *ngIf="config?.ticketURL" class="nav-link" [href]="config?.ticketURL" target="_blank" rel="noopener">Register</a>
       </li>
     </ul>
   </links>
