--- a/src/app/top-menu/top-menu.component.html
+++ b/src/app/top-menu/top-menu.component.html
@@ -35,7 +35,7 @@
           <a class="dropdown-item waves-light" (click)="userLogout()">Logout</a>
         </div>
       </li>
-      <li class="nav-item active">
+      <li class="nav-item active" *ngIf="config?.ticketURL">
         <a class="nav-link" [href]="config?.ticketURL" target="_blank" rel="noopener">Register</a>
       </li>
     </ul>
