--- a/src/app/sponsors/sponsor-list/sponsor-list.component.html
+++ b/src/app/sponsors/sponsor-list/sponsor-list.component.html
@@ -61,7 +61,7 @@
         <div class="modal-body">
           <div class="md-form form-sm">
             <i class="fa fa-tag prefix"></i>
-            <input mdbActive type="text" id="level" class="form-control" [(ngModel)]="level.name" name="name">
+            <input mdbInput type="text" id="level" class="form-control" [(ngModel)]="level.name" name="name">
             <label for="level">Level Name</label>
           </div>
           <div style="padding-bottom: 25px;">
