Fix unecessary getConfig

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,5 +1,5 @@
 <!--Footer-->
-<footer class="page-footer center-on-small-only elegant-color-dark d-print-none" *ngIf="siteConfig | async as config">
+<footer class="page-footer center-on-small-only elegant-color-dark d-print-none" *ngIf="siteConfigService.siteConfig as siteConfig">
 
   <!--Footer Links-->
   <div class="container-fluid">
