--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,4 +1,4 @@
-<header *ngIf="siteConfig$ | async as config">
+<header *ngIf="siteConfigService.siteConfig as config" style="position: relative">
 
   <app-top-menu></app-top-menu>
 
@@ -25,8 +25,8 @@
 
 </header>
 
-<div class="container" *ngIf="siteConfig$ | async as config">
-  <div id="about" class="divider-new pt-5">
+<div class="container" *ngIf="siteConfigService.siteConfig as config">
+  <div id="about" class="divider-new">
     <h2 class="h2-responsive">About</h2>
   </div>
 
@@ -158,7 +158,7 @@
   </div>
 
   <!--Section: CoC-->
-  <section id="coc" class="text-center">
+  <section id="coc" class="text-center mb-5">
     <h5>Be nice. Be respectful. Be collaborative.</h5>
     <p>{{ config?.eventName }} is dedicated to a harassment-free conference experience for everyone.</p>
     <p>
