--- a/src/app/sponsors/sponsor-list/sponsor-list.component.html
+++ b/src/app/sponsors/sponsor-list/sponsor-list.component.html
@@ -1,7 +1,7 @@
 <app-top-menu></app-top-menu>
 
 <div class="between-sections"><br><br></div>
-<div class="container">
+<div class="container" *ngIf="siteConfigService.siteConfig as config">
   <!--Section: Sponsors-->
   <section class="section pb-3">
     <!--Section heading-->
@@ -12,7 +12,7 @@
     </div>
     <div class="col sponsors">
       <h4>We partner with some of the<br/>world's most innovative brands.</h4>
-      <a class="btn btn-primary waves-light" [href]="(siteConfig | async)?.sponsorURL" target="_blank" rel="noopener">Become a Sponsor</a>
+      <a class="btn btn-primary waves-light" [href]="config.sponsorURL" target="_blank" rel="noopener">Become a Sponsor</a>
     </div>
     <div class="col sponsors" *ngFor="let level of levels | async">
       <h3 style="font-weight: bold;">
